# FastIBS

./: .gitignore  FastIBS_Supplementary_Document.docx  README.md  compile.sh  install.sh  intersect.sh  run.sh  submit_jobs.sh
init/: Dockerfile  config.sh
scripts/: build_img.sh  start_cont.sh
src/: CMakeLists.txt  FastIBS.cpp  FastIBSMapper.cpp  KDBIntersect.cpp  KmerDatabase.hpp  Utils.hpp  Window.hpp
src/misc/: matrix.cpp
